HtmlUi: Fixed label and input text alignment

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/clipboardfield/ClipboardField.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/clipboardfield/ClipboardField.css
@@ -1,7 +1,7 @@
 .clipboard-field > .field {
   margin-left: @mandatory-indicator-width;
   background-color: @item-selection-background-color;
-  padding: @text-field-padding;
+  padding: @text-field-padding-y @text-field-padding-x;
   #scout.user-select(text);
 
   & > img {
