--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/smartfield/SmartField.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/smartfield/SmartField.css
@@ -89,7 +89,7 @@
   }
 
   & .table-row {
-    padding-left: @text-field-padding - 8px;
+    padding-left: @text-field-padding-x - 8px;
   }
 
   & .table-row.selected,
