--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/main.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/main.css
@@ -123,7 +123,7 @@ input, textarea, .clipboard-field & > .field {
 }
 
 input {
-  padding: 0 @text-field-padding;
+  padding: 0 @text-field-padding-x;
 
   /* remove platform specific styling, mainly used to remove shadow on ios safari */
   -webkit-appearance: none;
@@ -143,7 +143,7 @@ textarea {
   /* these two properties are required for FF, otherwise the editable textarea is 2px too large, */
   /* and the DOM inspector does not include these 2 pixels. */
   margin: 0 auto;
-  padding: 5px @text-field-padding;
+  padding: @text-field-padding-y @text-field-padding-x;
   resize: none;
   /* Override default overflow value 'scroll' in IE */
   overflow: auto;
